// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden CodeGraph compatibility output > emits stable analysis and summary shapes for a representative Perl repo 1`] = `
{
  "call_graph": [
    {
      "confidence": "medium",
      "provenance": [
        "tree-sitter",
        "self-method-resolution",
      ],
      "source": "My::App::run",
      "source_key": "sha256:ec84c79092a9e1cd9ae0e8d6419579552392994e40954920c5f2d6f6f904462e",
      "target": "My::App::service",
      "target_key": "sha256:0382ffe30fd3e5b3f1c95d729da93aa0ff39e274681961568cc94c0e5fafa375",
    },
  ],
  "capabilities": {
    "exact_relationship_endpoints": true,
    "exact_symbol_keys": true,
    "language": "perl",
    "supported_extensions": [
      ".pl",
      ".pm",
      ".t",
      ".psgi",
    ],
    "unresolved_relationship_diagnostics": true,
  },
  "complete": true,
  "counts": {
    "discovered_files": 3,
    "discovered_relationships": 5,
    "discovered_symbols": 10,
    "dynamic_patterns": 0,
    "emitted_files": 3,
    "emitted_relationships": 3,
    "emitted_symbols": 10,
    "parse_diagnostics": 0,
    "parse_failures": 0,
    "unresolved_relationships": 2,
  },
  "generated_at": "<generated_at>",
  "index_stats": {
    "dynamic_pattern_count": 0,
    "failed_files": 0,
    "index_state": "ready",
    "parse_error_count": 0,
    "parsed_files": 3,
    "relationship_count": 3,
    "symbol_count": 10,
    "total_files": 3,
  },
  "language_coverage": {
    ".pl": "supported",
    ".pm": "supported",
    ".psgi": "supported",
    ".t": "supported",
  },
  "module_graph": [
    {
      "confidence": "low",
      "kind": "use",
      "source_file": "lib/My/App.pm",
      "source_module": "My::App",
      "target_module": "Moo",
    },
    {
      "confidence": "high",
      "kind": "use",
      "source_file": "lib/My/App.pm",
      "source_module": "My::App",
      "target_file": "lib/My/Service.pm",
      "target_module": "My::Service",
    },
    {
      "confidence": "low",
      "kind": "use",
      "source_file": "lib/My/Role.pm",
      "source_module": "My::Role",
      "target_module": "Moo::Role",
    },
  ],
  "parse_diagnostics": [],
  "parse_failures": [],
  "provider_status": "ready",
  "relationships": [
    {
      "confidence": "high",
      "file_path": "lib/My/App.pm",
      "kind": "imports",
      "line_start": 3,
      "provenance": [
        "tree-sitter",
        "module-resolution",
      ],
      "source": "My::App",
      "source_key": "sha256:6cf2c2386456474b335ee05f411823a02c44d66fb3fa50c209740f5551f78aa3",
      "target": "My::Service",
      "target_key": "sha256:cd1a1af7c01457e90b1a0f46a02678277f4df5dcd74d1b3dba106914ba767a31",
    },
    {
      "confidence": "high",
      "file_path": "lib/My/App.pm",
      "kind": "uses_role",
      "line_start": 4,
      "provenance": [
        "moose-moo-role",
        "module-resolution",
      ],
      "source": "My::App",
      "source_key": "sha256:6cf2c2386456474b335ee05f411823a02c44d66fb3fa50c209740f5551f78aa3",
      "target": "My::Role",
      "target_key": "sha256:e13386d8d0c82c9aa3f8ac1b054ee062c2d3f249d90ee3e1a8d4b42341f6ae60",
    },
    {
      "confidence": "medium",
      "file_path": "lib/My/App.pm",
      "kind": "calls",
      "line_start": 8,
      "provenance": [
        "tree-sitter",
        "self-method-resolution",
      ],
      "source": "My::App::run",
      "source_key": "sha256:ec84c79092a9e1cd9ae0e8d6419579552392994e40954920c5f2d6f6f904462e",
      "target": "My::App::service",
      "target_key": "sha256:0382ffe30fd3e5b3f1c95d729da93aa0ff39e274681961568cc94c0e5fafa375",
    },
  ],
  "repo_path": "<repo_path>",
  "schema_version": 2,
  "supported": true,
  "symbols": [
    {
      "file_path": "lib/My/App.pm",
      "kind": "file",
      "language": "perl",
      "line_end": 10,
      "line_start": 1,
      "name": "lib/My/App.pm",
      "provenance": [
        "file-discovery",
      ],
      "qualified_name": "lib/My/App.pm",
      "symbol_key": "sha256:9f086dcb1015f2b7f3afde5f23c3e5095a0a1e7fbd38b9fed479211ccface057",
    },
    {
      "file_path": "lib/My/App.pm",
      "kind": "package",
      "language": "perl",
      "line_end": 1,
      "line_start": 1,
      "name": "My::App",
      "provenance": [
        "tree-sitter",
        "line-scan",
      ],
      "qualified_name": "My::App",
      "symbol_key": "sha256:6cf2c2386456474b335ee05f411823a02c44d66fb3fa50c209740f5551f78aa3",
    },
    {
      "file_path": "lib/My/App.pm",
      "kind": "method",
      "language": "perl",
      "line_end": 5,
      "line_start": 5,
      "name": "service",
      "provenance": [
        "moose-moo-attribute",
        "line-scan",
      ],
      "qualified_name": "My::App::service",
      "signature": "has service",
      "symbol_key": "sha256:0382ffe30fd3e5b3f1c95d729da93aa0ff39e274681961568cc94c0e5fafa375",
    },
    {
      "file_path": "lib/My/App.pm",
      "kind": "method",
      "language": "perl",
      "line_end": 10,
      "line_start": 6,
      "name": "run",
      "provenance": [
        "tree-sitter",
        "line-scan",
      ],
      "qualified_name": "My::App::run",
      "signature": "sub run",
      "symbol_key": "sha256:ec84c79092a9e1cd9ae0e8d6419579552392994e40954920c5f2d6f6f904462e",
    },
    {
      "file_path": "lib/My/Role.pm",
      "kind": "file",
      "language": "perl",
      "line_end": 4,
      "line_start": 1,
      "name": "lib/My/Role.pm",
      "provenance": [
        "file-discovery",
      ],
      "qualified_name": "lib/My/Role.pm",
      "symbol_key": "sha256:d2372713558323728b9fa873ba3855ebf187dbfd3d9b7685767be848ad26dc17",
    },
    {
      "file_path": "lib/My/Role.pm",
      "kind": "package",
      "language": "perl",
      "line_end": 1,
      "line_start": 1,
      "name": "My::Role",
      "provenance": [
        "tree-sitter",
        "line-scan",
      ],
      "qualified_name": "My::Role",
      "symbol_key": "sha256:e13386d8d0c82c9aa3f8ac1b054ee062c2d3f249d90ee3e1a8d4b42341f6ae60",
    },
    {
      "file_path": "lib/My/Role.pm",
      "kind": "sub",
      "language": "perl",
      "line_end": 4,
      "line_start": 3,
      "name": "provided",
      "provenance": [
        "tree-sitter",
        "line-scan",
      ],
      "qualified_name": "My::Role::provided",
      "signature": "sub provided",
      "symbol_key": "sha256:d0caf4cf5d08530caa6da231e124d80c8e8bcd172d7a6ff66fe82ce068c70ec6",
    },
    {
      "file_path": "lib/My/Service.pm",
      "kind": "file",
      "language": "perl",
      "line_end": 3,
      "line_start": 1,
      "name": "lib/My/Service.pm",
      "provenance": [
        "file-discovery",
      ],
      "qualified_name": "lib/My/Service.pm",
      "symbol_key": "sha256:cdc7a98319c160272f038d1248b541d53e425ede148c7c783395d32082ddf896",
    },
    {
      "file_path": "lib/My/Service.pm",
      "kind": "package",
      "language": "perl",
      "line_end": 1,
      "line_start": 1,
      "name": "My::Service",
      "provenance": [
        "tree-sitter",
        "line-scan",
      ],
      "qualified_name": "My::Service",
      "symbol_key": "sha256:cd1a1af7c01457e90b1a0f46a02678277f4df5dcd74d1b3dba106914ba767a31",
    },
    {
      "file_path": "lib/My/Service.pm",
      "kind": "sub",
      "language": "perl",
      "line_end": 3,
      "line_start": 2,
      "name": "execute",
      "provenance": [
        "tree-sitter",
        "line-scan",
      ],
      "qualified_name": "My::Service::execute",
      "signature": "sub execute",
      "symbol_key": "sha256:12cf9be65de438695817d0a6d1fc874e7a204597e84e3b273b859aa541ccc3eb",
    },
  ],
  "tool": "perlgraph",
  "tool_version": "0.1.0",
  "unresolved_relationships": [
    {
      "confidence": "low",
      "file_path": "lib/My/App.pm",
      "kind": "imports",
      "line_start": 2,
      "notes": "Module Moo did not resolve to a repository file",
      "provenance": [
        "tree-sitter",
        "module-resolution",
      ],
      "source": "My::App",
      "source_key": "sha256:6cf2c2386456474b335ee05f411823a02c44d66fb3fa50c209740f5551f78aa3",
      "target": "Moo",
    },
    {
      "confidence": "low",
      "file_path": "lib/My/Role.pm",
      "kind": "imports",
      "line_start": 2,
      "notes": "Module Moo::Role did not resolve to a repository file",
      "provenance": [
        "tree-sitter",
        "module-resolution",
      ],
      "source": "My::Role",
      "source_key": "sha256:e13386d8d0c82c9aa3f8ac1b054ee062c2d3f249d90ee3e1a8d4b42341f6ae60",
      "target": "Moo::Role",
    },
  ],
  "unsupported_patterns": [],
}
`;

exports[`golden CodeGraph compatibility output > emits stable analysis and summary shapes for a representative Perl repo 2`] = `
{
  "capabilities": {
    "exact_relationship_endpoints": true,
    "exact_symbol_keys": true,
    "language": "perl",
    "supported_extensions": [
      ".pl",
      ".pm",
      ".t",
      ".psgi",
    ],
    "unresolved_relationship_diagnostics": true,
  },
  "complete": true,
  "confidence_audit": {
    "examples": [
      {
        "confidence": "medium",
        "kind": "calls",
        "provenance": [
          "tree-sitter",
          "self-method-resolution",
        ],
        "source": "My::App::run",
        "target": "My::App::service",
      },
      {
        "confidence": "low",
        "kind": "imports",
        "notes": "Module Moo did not resolve to a repository file",
        "provenance": [
          "tree-sitter",
          "module-resolution",
        ],
        "source": "My::App",
        "target": "Moo",
      },
      {
        "confidence": "low",
        "kind": "imports",
        "notes": "Module Moo::Role did not resolve to a repository file",
        "provenance": [
          "tree-sitter",
          "module-resolution",
        ],
        "source": "My::Role",
        "target": "Moo::Role",
      },
    ],
    "relationships": [
      {
        "confidence": "high",
        "count": 2,
      },
      {
        "confidence": "low",
        "count": 2,
      },
      {
        "confidence": "medium",
        "count": 1,
      },
    ],
  },
  "counts": {
    "discovered_files": 3,
    "discovered_relationships": 5,
    "discovered_symbols": 10,
    "dynamic_patterns": 0,
    "emitted_files": 3,
    "emitted_relationships": 3,
    "emitted_symbols": 10,
    "parse_diagnostics": 0,
    "parse_failures": 0,
    "unresolved_relationships": 2,
  },
  "dynamic_risk": {
    "count": 0,
    "examples": [],
    "patterns": [],
  },
  "framework_evidence": {
    "modifiers": [],
  },
  "generated_at": "<generated_at>",
  "index_state": "ready",
  "index_stats": {
    "dynamic_pattern_count": 0,
    "failed_files": 0,
    "index_state": "ready",
    "parse_error_count": 0,
    "parsed_files": 3,
    "relationship_count": 3,
    "symbol_count": 10,
    "total_files": 3,
  },
  "provider_status": "ready",
  "relationship_kinds": [
    {
      "count": 1,
      "kind": "calls",
    },
    {
      "count": 1,
      "kind": "imports",
    },
    {
      "count": 1,
      "kind": "uses_role",
    },
  ],
  "repo_path": "<repo_path>",
  "schema_version": 2,
  "symbol_kinds": [
    {
      "count": 3,
      "kind": "file",
    },
    {
      "count": 3,
      "kind": "package",
    },
    {
      "count": 2,
      "kind": "method",
    },
    {
      "count": 2,
      "kind": "sub",
    },
  ],
  "tool": "perlgraph",
  "tool_version": "0.1.0",
  "top_callees": [
    {
      "incoming_calls": 1,
      "symbol": "My::App::service",
    },
  ],
  "top_callers": [
    {
      "outgoing_calls": 1,
      "symbol": "My::App::run",
    },
  ],
  "top_modules": [
    {
      "module": "My::App",
      "outgoing_dependencies": 2,
    },
    {
      "module": "My::Role",
      "outgoing_dependencies": 1,
    },
  ],
}
`;
